--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="left-content">
             <h1>the first supper</h1>
             <div class="subtitle">an exclusive dinner for interesting students</div>
-            <div class="subtitle-sponsor">sponsored by a16z</div>
+            <div class="subtitle-sponsor">sponsored by a16z & founders fund</div>
             
             <section id="who">
                 <h2><i>who am i</i></h2>
